# agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  tools.yaml
.gemini/: settings.json
python/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
python/agents/: README.md  constants.py
python/agents/agent-adk-toolbox-cloudsql/: README.md  agent.py
python/agents/agent-adk-toolbox-cloudsql/sql/: seed.sql
python/agents/agent_currency/: agent.py
python/agents/agent_spanner_mcp/: agent.py
python/agents/agent_team/: README.md  agent.py  agents.py  callbacks.py  main.py  services.py  tools.py
python/agents/agent_toolbox_mcp/: README.md  agent.py
python/agents/currency/: agent.py
python/agents/finance/: agent-card.json  agent.py  ucp_tools.py  x402_middleware.py
python/agents/identity/: manager.py
python/agents/intro_demo/: agent.py
python/agents/jobs/: agent-card.json  agent.py  main.py  plugins.py
python/agents/multi_tool_agent/: agent.py
python/agents/multimodal_agent/: agent.py
python/agents/orchestrator/: README.md  agent-card.json  agent.py  agents.py  main.py  plugins.py  services.py  tools.py
python/agents/single_tool_agent/: agent.py
python/agents/spanner/: agent.py
python/agents/time_teller/: README.md  agent.py
python/agents/time_teller/.adk/: session.db
python/agents/weather/: agent.py  tools.py
python/mcp_servers/currency/: server.py
python/mcp_servers/jobs_db/: cloud_sql_seed.sql
python/mcp_servers/weather/: server.py
python/notebooks/: weather_bot.ipynb
(+8 files in other folders)
